--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "qrcode.react": "^3.1.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
+    "react-chatbot-kit": "^2.2.2",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-geocode": "^1.0.0-alpha.1",
@@ -54,6 +55,7 @@
     "react-signature-canvas": "^1.0.6",
     "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.30.2",
+    "react-spinners": "^0.14.1",
     "react-tsparticles": "^2.12.2",
     "react-typed": "^2.0.12",
     "react-typing-effect": "^2.0.5",
