--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "driver.js": "^1.3.1",
     "feather-icons": "^4.29.2",
     "framer-motion": "^11.3.2",
+    "google-maps": "^4.3.3",
     "graphql": "^16.9.0",
     "gsap": "^3.12.5",
     "i18next": "^23.14.0",
@@ -35,6 +36,7 @@
     "leaflet": "^1.9.4",
     "leaflet-control-geocoder": "^2.4.0",
     "leaflet-routing-machine": "^3.2.12",
+    "lottie-react": "^2.4.0",
     "materialize-css": "^1.0.0-rc.2",
     "moment": "^2.30.1",
     "notiflix": "^3.2.7",
